--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -56,6 +56,10 @@
   <ItemGroup>
     <Compile Include="Category.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202104080452246_Category.cs" />
+    <Compile Include="Migrations\202104080452246_Category.Designer.cs">
+      <DependentUpon>202104080452246_Category.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +67,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202104080452246_Category.resx">
+      <DependentUpon>202104080452246_Category.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
